<resources>
    <string name="app_name">TViscovery</string>
    <string name="interess">Interessé</string>
    <string name="j_aime">J\'aime</string>
    <string name="je_ne_sais_pas">Pas interessé</string>
    <string name="j_aime_pas">J\'aime pas</string>
    <string name="icon_button_label_enabled">J\'aime</string>
    <string name="image">Image</string>
    <string name="titre">Titre</string>
    <string name="genre">Genre</string>
    <string name="synopsis">Synopsis</string>
    <string name="vous_avez_vu_tout_le_contenu_revenez_plus_tard_pour_avoir_des_nouveaut_s">Vous avez vu tout le contenu, revenez plus tard pour avoir des nouveautés.</string>
    <string name="logo">Logo</string>
    <string name="info">Info</string>
    <string name="c_est_partie">Découvrir</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_list_show">ListShowActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_view_tvshow_of_list">ViewTvshowOfListActivity</string>
    <string name="bouton_lancer_video">Bouton lancer video</string>
    <string name="bouton_retour_arri_re">Bouton retour arrière</string>
    <string name="bouton_j_aime">Bouton j\'aime</string>
    <string name="bouton_int_ress">Bouton intéressé</string>
    <string name="bouton_passer">Bouton passer</string>
    <string name="bouton_j_aime_pas">Bouton j\'aime pas</string>
    <string name="lancer_la_video">Lancer la video</string>
    <string name="bouton_retour_en_arriere">Bouton retour en arriere</string>
    <string name="bouton_info">Bouton info</string>
    <string name="bouton_j_aime2">Bouton j\'aime</string>
    <string name="bouton_supprimer">Bouton supprimer</string>
    <string name="bouton_j_aime_pas2">Bouton j\'aime pas</string>
</resources>
