<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDisplayShowLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".DisplayTVShowActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:visibility="visible"
            tools:srcCompat="@drawable/logo" />


        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/text_grad"
            android:fontFamily="@font/roboto"
            android:gravity="bottom"
            android:paddingStart="15dp"
            android:paddingEnd="80dp"
            android:paddingBottom="15dp"
            android:text="@string/titre"
            android:textColor="@android:color/background_light"
            android:textSize="22sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/genreLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/text_grad_reverse"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backButton"
                android:layout_width="0dp"

                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/bouton_retour_arri_re"
                android:focusable="true"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:tint="@color/genre"
                app:srcCompat="@drawable/baseline_arrow_back_black_48" />

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_weight="5"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:text="@string/genre"
                android:textAlignment="center"
                android:textColor="@color/genre"
                android:textStyle="bold|italic" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/infoButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:visibility="invisible"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/bouton_info"
                android:focusable="true"
                android:scaleType="fitCenter"
                android:tint="@color/genre"
                app:srcCompat="@drawable/baseline_info_white_48" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/playButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="20dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/colorPrimary"
            android:clickable="true"
            android:contentDescription="@string/lancer_la_video"
            android:focusable="true"
            android:tint="@color/genre"
            app:backgroundTint="@color/backgroundButton"
            app:borderWidth="1dp"
            app:srcCompat="@android:drawable/ic_media_play" />
    </RelativeLayout>


    <TextView
        android:id="@+id/synopsisTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="4"
        android:autoSizeMaxTextSize="19sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/roboto"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/synopsis"
        android:textColor="@color/synopsis"
        android:textSize="16sp" />


    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:paddingBottom="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/likeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/bouton_j_aime"
                android:focusable="true"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/round_thumb_up_24" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/skipButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/bouton_passer"
                android:focusable="true"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/round_clear_24" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/dislikeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@string/bouton_j_aime_pas"
                android:focusable="true"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/round_thumb_down_24" />

        </LinearLayout>


    </LinearLayout>




</LinearLayout>